--- a/templates/education.html
+++ b/templates/education.html
@@ -1,5 +1,5 @@
 <div>
-    {{ time_period }}
-    {{ institution }} - {{ attained_level }}
-    {{ description }}
+    {{ education.time_period }}
+    {{ education.institution }} - {{ education.attained_level }}
+    {{ education.description }}
 </div>
