--- a/templates/experience.html
+++ b/templates/experience.html
@@ -1,5 +1,5 @@
 <div>
-    {{ time_period }}
-    {{ company_name }} - {{ title }}
-    {{ description }}
+    {{ experience.time_period }}
+    {{ experience.company_name }} - {{ experience.title }}
+    {{ experience.description }}
 </div>
